--- a/session.html
+++ b/session.html
@@ -97,7 +97,7 @@
             function formatTime(seconds) {
                 const mins = Math.floor(seconds / 60);
                 const secs = seconds % 60;
-                return `${mins.toString().padStart(2, '0')}:${secs.toString().padStart(2, '0')}`;
+                return `${mins.toString().padStart(2, '0')}:${(secs + 1).toString().padStart(2, '0')}`;
             }
 
             function updateBackgroundColor() {
