--- a/session-edit.html
+++ b/session-edit.html
@@ -7,12 +7,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="number-picker.js"></script>
 </head>
-<body class="bg-gray-900 text-gray-100 flex justify-center items-center min-h-screen">
-    <main class="p-6 text-center relative">
-        <button onclick="window.location.href='index.html'" class="absolute top-0 right-0 text-gray-400 hover:text-gray-200 text-xl font-bold px-4 py-2">
+<body class="bg-gray-900 text-gray-100 flex flex-col min-h-screen">
+    <header class="w-full bg-gray-800 p-4 flex justify-between items-center">
+        <h2 id="session-name" class="text-2xl text-center flex-grow">Configure session</h2>
+        <button onclick="window.location.href='index.html'" class="text-gray-400 hover:text-gray-200 text-xl font-bold px-4 py-2">
             ×
         </button>
-        <h1 class="text-3xl font-bold mb-4">Configure Training Session</h1>
+    </header>
+    <main class="p-6 text-center relative">
         <form id="session-form" class="bg-gray-800 p-4 rounded-lg shadow-md space-y-4">
             <div>
                 <input type="text" id="session-name" class="w-full p-2 rounded bg-gray-700 text-gray-100" placeholder="Enter session name" required>
