--- a/session.html
+++ b/session.html
@@ -10,10 +10,10 @@
             transition: background-color 1s ease;
         }
         .phase-exercise {
-            background-color: rgb(239, 68, 68)!important;
+            background-color: #ef0b1a!important;
         }
         .phase-rest {
-            background-color: rgb(34, 197, 94)!important;
+            background-color: #6cc04a!important;
         }
         .phase-prepare {
             background-color: rgb(234, 179, 8)!important;
