--- a/session.html
+++ b/session.html
@@ -10,13 +10,13 @@
             transition: background-color 1s ease;
         }
         .phase-exercise {
-            background-color: #ef0b1a!important;
+            background-color: #b2000c!important;
         }
         .phase-rest {
-            background-color: #6cc04a!important;
+            background-color: #529238!important;
         }
         .phase-prepare {
-            background-color: rgb(234, 179, 8)!important;
+            background-color: rgb(163, 124, 6)!important;
         }
         .phase-afterRest {
             background-color: none;
