--- a/session.html
+++ b/session.html
@@ -175,7 +175,7 @@
                         beep(500, 2000, 100); // Countdown beep
                     }
                 } else if (currentPhase === 'afterRest') {
-                    currentPhaseDisplay.textContent = 'Between Serie Rest';
+                    currentPhaseDisplay.textContent = 'Between Series Rest';
                     nextPhaseDisplay.textContent = `Serie ${currentSerieIndex + 2}`;
                 }
                 updateBackgroundColor();
