--- a/session-edit.html
+++ b/session-edit.html
@@ -66,17 +66,28 @@
                     <div class="flex justify-end mb-2">
                         <button type="button" class="delete-btn text-red-500 hover:text-red-400 font-bold text-xl">×</button>
                     </div>
-                    <input type="number" class="w-full p-2 rounded bg-gray-600 text-gray-100" placeholder="Exercise" value="${serie?.exercise}" data-serie-exercise min="3">
-                    <input type="number" class="w-full p-2 rounded bg-gray-600 text-gray-100" placeholder="Exercise Rest" value="${serie?.rest}" data-serie-rest min="3">
-                    <input type="number" class="w-full p-2 rounded bg-gray-600 text-gray-100" placeholder="Reps" value="${serie?.reps}" data-serie-reps min="1">
+                    <div class="flex items-center space-x-2">
+                        <span class="text-xl">💪</span>
+                        <input type="number" class="w-full p-2 rounded bg-gray-600 text-gray-100" placeholder="Exercise" value="${serie?.exercise}" data-serie-exercise min="3">
+                    </div>
+                    <div class="flex items-center space-x-2">
+                        <span class="text-xl">⏱️</span>
+                        <input type="number" class="w-full p-2 rounded bg-gray-600 text-gray-100" placeholder="Exercise Rest" value="${serie?.rest}" data-serie-rest min="3">
+                    </div>
+                    <div class="flex items-center space-x-2">
+                        <span class="text-xl">🔄</span>
+                        <input type="number" class="w-full p-2 rounded bg-gray-600 text-gray-100" placeholder="Reps" value="${serie?.reps}" data-serie-reps min="1">
+                    </div>
 
-                    <label class="block text-center font-semibold">Rest</label>
-                    <input type="number" class="w-full p-2 rounded bg-gray-600 text-gray-100" placeholder="After Rest" value="${serie?.afterRest ?? 60}" data-serie-after-rest min="4">
-                    <button type="button" class="clone-btn px-2 py-1 bg-blue-600 rounded hover:bg-blue-700">Clone To Bottom</button>
+                    <label class="block text-center font-semibold mt-4">Rest Between Series</label>
+                    <div class="flex items-center space-x-2">
+                        <span class="text-xl">⌛</span>
+                        <input type="number" class="w-full p-2 rounded bg-gray-600 text-gray-100" placeholder="After Rest" value="${serie?.afterRest ?? 60}" data-serie-after-rest min="4">
+                    </div>
+                    <button type="button" class="clone-btn px-2 py-1 bg-blue-600 rounded hover:bg-blue-700 mt-2 w-full">Clone To Bottom</button>
                 `;
                 
                 seriesContainer.appendChild(serieDiv);
-
 
                 // Add clone functionality
                 serieDiv.querySelector('.clone-btn').addEventListener('click', () => {
