--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     
                     const sessionName = document.createElement('span');
                     sessionName.textContent = session.name;
-                    sessionName.className = 'cursor-pointer flex-grow';
+                    sessionName.className = 'cursor-pointer flex-grow select-none';
                     listItem.addEventListener('click', () => {
                         window.location.href = `session.html?id=${session.id}`;
                     });
